skiplang/compiler/invalid_tests/typechecking/allow_tracked_call_tracked_fun.sk
// @allow_tracked_call requires the annotated function to be untracked
@allow_tracked_call
fun f(): String {
  "Fail\n"
}

fun main(): void {
  print_raw(f())
}
